--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ a {
   background-color: #2f2f2f;
   color: #fff;
   cursor: pointer;
+  margin-right: 5px;
 }
 a:hover {
   transition: all 0.4s ease;
@@ -59,9 +60,9 @@ img {
   body {
     padding: 20px 50px;
   }
-  /* a {
-        padding: 5px 10px;
-      } */
+  a {
+    padding: 5px 10px;
+  }
   .grid-gallery {
     grid-template-columns: repeat(1, 1fr);
     gap: 5px;
